# nix-compiler

./: .gitignore  Cargo.toml  TODO  analyze-tracing-log.nu  build  flake.nix  rust-toolchain.toml
crates/macros/: Cargo.toml
crates/macros/src/: builtin.rs  gen_builtins.rs  lib.rs  params.rs
crates/macros/src/profile/: func.rs  mod.rs  scope.rs
examples/: basic.nix  error-attribute-missing.nix  error-syntax.nix  error-variable-not-found.nix  flake.nix  hello.nix  import.nix  inherit.nix  lambda.nix  letin.nix  list.nix  minimal.nix  path.nix  rec.nix  self-flake.nix  syntax-error.nix  test-flake.nix  test.nix  with.nix
scripts/: analyze-tracing-log.nu  common.nu
src/: builtins.rs  expr.rs  flake.rs  main.rs  result.rs  scope.rs  value.rs
src/builtins/: hash.rs  impl.rs
src/derivation/: hash.rs  mod.rs  parser.rs
src/result/: backtrace.rs
src/scope/: file.rs
src/value/: attrset.rs  lazy.rs  pretty_print.rs  var.rs
src/value/attrset/: builder.rs
