[workspace]
members = ["crates/macros"]

[package]
name = "nix-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
nix-macros = { path = "./crates/macros/" }

# Parser
rnix = "0.11.0"
rowan = "0.15.0" # Ast interaction with rnix

# Utility
thiserror = "1.0.65"
openssl = "0.10.68"
