[workspace]
members = ["crates/macros"]

[package]
name = "nix-compiler"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[features]
default = ["debug"]
debug = []
profiling = ["dep:tracing", "dep:tracing-subscriber", "nix-macros/profiling"]

[dependencies]
nix-macros = { path = "./crates/macros/", default-features = false }

# Hashing
hex = "0.4.3"
openssl = "0.10.68"

# Parser
rnix = "0.11.0"
rowan = "0.15.0" # Ast interaction with rnix

# Profiling
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

# Utility
indexset = { git = "https://github.com/brurucy/indexset.git", rev = "27dcefb" }
thiserror = "1.0.65"
regex = "1.11.1"
